--- a/KnowGo/index.html
+++ b/KnowGo/index.html
@@ -26,7 +26,7 @@ body {
     <section class="banner">
         <div class="container">
             <div class="banner-content">
-                <h1>Учись с интересом на <strong>ЗнаюВсё</strong></h1>
+                <h1>Учись с интересом на <strong>ЗнайВсё</strong></h1>
                 <p>Интерактивная платформа для адаптивного и увлекательного обучения.</p>
                 <a href="page1.html" class="btn primary">Начать обучение</a>
             </div>
