--- a/KnowGo/pageinf3.html
+++ b/KnowGo/pageinf3.html
@@ -19,7 +19,7 @@
             <img src="/Users/sutefanii/Documents/lalala.svg" class="logo">
             <nav class="nav-links">
                 <a href="index.html">Главная</a>
-                <a href="#">О платформе</a>
+                <a href="#" onclick="redirectToIndex()">О платформе</a>
                 <a href="#">Контакты</a>
             </nav>
         </div>
@@ -85,8 +85,11 @@
                 <a href="#">Контакты</a>
                 <a href="#">Поддержка</a>
             </div>
-            <p>&copy; 2024 ЗнаюВсё. Все права защищены.</p>
+            <p>&copy; 2024 ЗнайВсё. Все права защищены.</p>
         </div>
     </footer>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
