--- a/KnowGo/page3.html
+++ b/KnowGo/page3.html
@@ -77,6 +77,10 @@
         </section>
     </main>
 
+    <div class="test-link">
+        <a href="math-test.html" class="test">Пройти тест</a>
+    </div>
+    
     <!-- Футер -->
     <footer>
         <div class="container footer">
