--- a/KnowGo/page1.html
+++ b/KnowGo/page1.html
@@ -28,7 +28,7 @@
     <!-- Основной контент -->
     <main class="container">
         <section class="subjects">
-            <button class="back-button" onclick="goBack()">Назад</button>          
+            <!-- <button class="back-button" onclick="goBack()">Назад</button> -->     
             <h2>Выберите предмет</h2>
             <div class="subject-grid">
                 <div class="subject-card">
@@ -57,7 +57,7 @@
     </main>
 
 
-    
+
     <!-- Футер -->
     <footer>
         <div class="container footer">
