--- a/KnowGo/page1.html
+++ b/KnowGo/page1.html
@@ -34,17 +34,17 @@
                 <div class="subject-card">
                     <h3>Математика</h3>
                     <p>Темы: алгебра, геометрия, тригонометрия.</p>
-                    <a href="page3.html" onclick="addMath()" class="btn">Выбрать</a>
+                    <a href="" onclick="addMath()" class="btn">Выбрать</a>
                 </div>
                 <div class="subject-card">
                     <h3>Физика</h3>
                     <p>Темы: механика, электричество, оптика.</p>
-                    <a href="pagephys.html" onclick="addPhysics()" class="btn">Выбрать</a>
+                    <a href="" onclick="addPhysics()" class="btn">Выбрать</a>
                 </div>
                 <div class="subject-card">
                     <h3>Информатика</h3>
                     <p>Темы: основы, алгоритмизация, цифровая грамотность.</p>
-                    <a href="pageinf.html" onclick="addCs()" class="btn">Выбрать</a>
+                    <a href="" onclick="addCs()" class="btn">Выбрать</a>
                 </div>
                 <div class="subject-card">
                     <h3>Английский</h3>
