--- a/KnowGo/page1.html
+++ b/KnowGo/page1.html
@@ -28,6 +28,7 @@
     <!-- Основной контент -->
     <main class="container">
         <section class="subjects">
+            <a href="index.html" class="filter-btn">Ha главную</a>
             <!-- <button class="back-button" onclick="goBack()">Назад</button> -->     
             <h2>Выберите предмет</h2>
             <div class="subject-grid">
