--- a/KnowGo/index.html
+++ b/KnowGo/index.html
@@ -15,7 +15,7 @@ body {
 <body>
     <header>
         <div class="container header">
-            <img src="/Users/sutefanii/Documents/lalala.svg" class="logo">
+            <img src="knal.svg" class="logo">
             <nav>
                 <a href="#" class="btn">Вход</a>
                 <a href="#" class="btn primary">Регистрация</a>
