--- a/KnowGo/pageinfteo3.html
+++ b/KnowGo/pageinfteo3.html
@@ -16,7 +16,7 @@
     <!-- Шапка -->
     <header>
         <div class="container header">
-            <img src="/Users/sutefanii/Documents/lalala.svg" class="logo" alt="Логотип">
+            <img src="knal.svg" class="logo" alt="Логотип">
             <nav class="nav-links">
                 <a href="index.html">Главная</a>
                 <a href="#" onclick="redirectToIndex()">О платформе</a>
