--- a/KnowGo/math-test.html
+++ b/KnowGo/math-test.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container header">
-            <img src="/Users/sutefanii/Documents/lalala.svg" class="logo">
+            <img src="knal.svg" class="logo">
             <nav class="nav-links">
                 <a href="index.html">Главная</a>
                 <a href="#" onclick="redirectToIndex()">О платформе</a>
