--- a/KnowGo/pageinfteo2.html
+++ b/KnowGo/pageinfteo2.html
@@ -16,7 +16,7 @@
     <!-- Шапка -->
     <header>
         <div class="container header">
-            <img src="/Users/sutefanii/Documents/lalala.svg" class="logo">
+            <img src="knal.svg" class="logo">
             <nav class="nav-links">
                 <a href="index5.html">Главная</a>
                 <a href="#" onclick="redirectToIndex()">О платформе</a>
